force-app/main/default/objects/Account/fields/ACC_AR__c.field-meta.xml
<CustomField>
    <fullName>ACC_AR__c</fullName>
    <label>AR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>