force-app/main/default/objects/Account/fields/ACC_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACC_Contact_Phone__c</fullName>
    <formula>&apos;&apos;
/*HYPERLINK(&quot;tel:&quot; + KOR_ACC_Key_Contact_Name__r.Phone, KOR_ACC_Key_Contact_Name__r.Phone)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Keyman Contact Phone</label>
    <type>Text</type>
</CustomField>