force-app/main/default/objects/Account/fields/ACC_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>ACC_CustomerID__c</fullName>
    <externalId>true</externalId>
    <label>Customer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>