force-app/main/default/objects/Account/fields/ACC_Device_Contract__c.field-meta.xml
<CustomField>
    <fullName>ACC_Device_Contract__c</fullName>
    <label>Contracted Device</label>
    <length>50</length>
    <type>Text</type>
</CustomField>