force-app/main/default/objects/Account/fields/ACC_Device_Contract_Targ__c.field-meta.xml
<CustomField>
    <fullName>ACC_Device_Contract_Targ__c</fullName>
    <label>Contracted Device Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>