force-app/main/default/objects/Account/fields/ACC_Invoice_Cust_Name__c.field-meta.xml
<CustomField>
    <fullName>ACC_Invoice_Cust_Name__c</fullName>
    <label>Invoice Customer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>