force-app/main/default/objects/Account/fields/ACC_Key_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>ACC_Key_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Keyman Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Keyman Contact Name)</relationshipLabel>
    <relationshipName>AccountsA</relationshipName>
    <type>Lookup</type>
</CustomField>