force-app/main/default/objects/Account/fields/ACC_Lens_Tool__c.field-meta.xml
<CustomField>
    <fullName>ACC_Lens_Tool__c</fullName>
    <label>Lens Tool (In-Store)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TR Lamp tool</fullName>
            </value>
            <value>
                <fullName>BLUV Tool</fullName>
            </value>
            <value>
                <fullName>Trial set_(comfort)</fullName>
            </value>
            <value>
                <fullName>Trial set_(Physio)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>