force-app/main/default/objects/Account/fields/ACC_LMTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>ACC_LMTD_Sales__c</fullName>
    <label>LYMTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>