force-app/main/default/objects/Account/fields/ACC_Other_Brands__c.field-meta.xml
<CustomField>
    <fullName>ACC_Other_Brands__c</fullName>
    <label>Other Brands</label>
    <length>20</length>
    <type>Text</type>
</CustomField>