force-app/main/default/objects/Account/fields/ACC_Override_Discount__c.field-meta.xml
<CustomField>
    <fullName>ACC_Override_Discount__c</fullName>
    <label>Override Discount %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>