force-app/main/default/objects/Account/fields/ACC_ProspectID__c.field-meta.xml
<CustomField>
    <fullName>ACC_ProspectID__c</fullName>
    <label>Prospect ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>