force-app/main/default/objects/Account/fields/ACC_Rank__c.field-meta.xml
<CustomField>
    <fullName>ACC_Rank__c</fullName>
    <formula>ACC_Segment__r.SEG_Code__c  &amp;  ACC_Secondary_Segment__r.SEG_Code__c</formula>
    <label>Rank</label>
    <type>Text</type>
</CustomField>