force-app/main/default/objects/Account/fields/ACC_RX_Discount_s__c.field-meta.xml
<CustomField>
    <fullName>ACC_RX_Discount_s__c</fullName>
    <label>RX Discount %</label>
    <length>50</length>
    <type>Text</type>
</CustomField>