force-app/main/default/objects/Account/fields/ACC_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>ACC_Sales_Rep_Name__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Name</label>
    <type>Text</type>
</CustomField>