force-app/main/default/objects/Account/fields/ACC_Secondary_Segment__c.field-meta.xml
<CustomField>
    <fullName>ACC_Secondary_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Grade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Segment__c.SEG_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Segment__c.SEG_Segment_Category__c</field>
            <operation>equals</operation>
            <value>Sales Grade</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Accounts (Potential Grade)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>