force-app/main/default/objects/Account/fields/ACC_Segment__c.field-meta.xml
<CustomField>
    <fullName>ACC_Segment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Potential Grade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Segment__c.SEG_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Segment__c.SEG_Segment_Category__c</field>
            <operation>equals</operation>
            <value>Potential Grade</value>
        </filterItems>
        <infoMessage>Please ensure to select an active segment value.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>