force-app/main/default/objects/Account/fields/ACC_ShopLocation__c.field-meta.xml
<CustomField>
    <fullName>ACC_ShopLocation__c</fullName>
    <label>Shop Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Pedestrian Zone</fullName>
            </value>
            <value>
                <fullName>Street</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>