force-app/main/default/objects/Account/fields/ACC_ShopOwner__c.field-meta.xml
<CustomField>
    <fullName>ACC_ShopOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Shop Owner)</relationshipLabel>
    <relationshipName>Account_Shop_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>