force-app/main/default/objects/Account/fields/ACC_Size_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>ACC_Size_of_Wallet__c</fullName>
    <label>Size of Wallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>