force-app/main/default/objects/Account/fields/ACC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ACC_Start_Date__c</fullName>
    <label>Start Date (Registration Date)</label>
    <type>Date</type>
</CustomField>