force-app/main/default/objects/Account/fields/ACC_Training_Activity__c.field-meta.xml
<CustomField>
    <fullName>ACC_Training_Activity__c</fullName>
    <label>Training Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>