force-app/main/default/objects/Account/fields/ACC_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>ACC_YTD_Sales__c</fullName>
    <label>YTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>