force-app/main/default/objects/Account/fields/Account_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Active</label>
    <type>Checkbox</type>
</CustomField>