force-app/main/default/objects/Account/fields/Account_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Account_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Blocked</label>
    <type>Checkbox</type>
</CustomField>