force-app/main/default/objects/Account/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Main Brand(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBGR</fullName>
            </value>
            <value>
                <fullName>NIKON</fullName>
            </value>
            <value>
                <fullName>MDD</fullName>
            </value>
            <value>
                <fullName>ESSILOR</fullName>
            </value>
            <value>
                <fullName>HOYA</fullName>
            </value>
            <value>
                <fullName>ZEISS</fullName>
            </value>
            <value>
                <fullName>DOKAI</fullName>
            </value>
            <value>
                <fullName>PENTAX</fullName>
            </value>
            <value>
                <fullName>SEIKO</fullName>
            </value>
            <value>
                <fullName>RODENSTOCK</fullName>
            </value>
            <value>
                <fullName>EXCELLITE</fullName>
            </value>
            <value>
                <fullName>NIDEK</fullName>
            </value>
            <value>
                <fullName>CHEMI</fullName>
            </value>
            <value>
                <fullName>DAEMYUNG</fullName>
            </value>
            <value>
                <fullName>HANMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>