force-app/main/default/objects/Account/fields/Collection_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Collection_Ranking__c</fullName>
    <label>Collection Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>At risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>