force-app/main/default/objects/Account/fields/Contract_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Contract_in_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract in Place</label>
    <type>Checkbox</type>
</CustomField>