force-app/main/default/objects/Account/fields/Coupon_Parent__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Parent__c</fullName>
    <label>Coupon Parent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>