force-app/main/default/objects/Account/fields/CS_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_Agent_Name__c</fullName>
    <label>CS Agent Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>