force-app/main/default/objects/Account/fields/Customer_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Key Account</label>
    <type>Checkbox</type>
</CustomField>