force-app/main/default/objects/Account/fields/Customer_Promo_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Promo_2__c</fullName>
    <label>Customer Promo 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>