force-app/main/default/objects/Account/fields/Customer_Search_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Search_Code__c</fullName>
    <label>Customer Search Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>