force-app/main/default/objects/Account/fields/Customer_Tax_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tax_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Tax Applicable</label>
    <type>Checkbox</type>
</CustomField>