force-app/main/default/objects/Account/fields/Customer_VIP__c.field-meta.xml
<CustomField>
    <fullName>Customer_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer VIP</label>
    <type>Checkbox</type>
</CustomField>