force-app/main/default/objects/Account/fields/IG_OG__c.field-meta.xml
<CustomField>
    <fullName>IG_OG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IG/OG</label>
    <type>Checkbox</type>
</CustomField>