force-app/main/default/objects/Account/fields/Inventory_list__c.field-meta.xml
<CustomField>
    <fullName>Inventory_list__c</fullName>
    <label>Inventory list</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NL2 AS ECC</fullName>
            </value>
            <value>
                <fullName>NL2 AS T8 ECC UV</fullName>
            </value>
            <value>
                <fullName>NL2AS BLUV</fullName>
            </value>
            <value>
                <fullName>NL2AS TR CLASSIC</fullName>
            </value>
            <value>
                <fullName>NL3 SP ECC</fullName>
            </value>
            <value>
                <fullName>NL3-AS BLUV</fullName>
            </value>
            <value>
                <fullName>NL3-AS TR CLASSIC</fullName>
            </value>
            <value>
                <fullName>NL3 AS SEE UV</fullName>
            </value>
            <value>
                <fullName>NL4 AS SEE UV</fullName>
            </value>
            <value>
                <fullName>NL4-AS BLUV</fullName>
            </value>
            <value>
                <fullName>NL3 DAS</fullName>
            </value>
            <value>
                <fullName>NL4 DAS</fullName>
            </value>
            <value>
                <fullName>NL5 DAS</fullName>
            </value>
            <value>
                <fullName>EYEZEN</fullName>
            </value>
            <value>
                <fullName>Photochromic BLUE Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>