force-app/main/default/objects/Account/fields/Main_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Main Contact Name)</relationshipLabel>
    <relationshipName>AccountsContact1</relationshipName>
    <type>Lookup</type>
</CustomField>