force-app/main/default/objects/Account/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Code</label>
    <referenceTo>BusinessGroup__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>