force-app/main/default/objects/Account/fields/Partner_Program_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Tier__c</fullName>
    <label>Partner Program Tier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>