force-app/main/default/objects/Account/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales District</label>
    <referenceTo>Sales_District__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>