force-app/main/default/objects/Account/fields/Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Code__c</fullName>
    <formula>&apos;&apos;
/*Owner.KOR_Sales_Rep_Code__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Code</label>
    <type>Text</type>
</CustomField>