force-app/main/default/objects/Account/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Territory</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterItems>
            <field>Sales_Territory__c.ST_Operating_Company__c</field>
            <operation>equals</operation>
            <valueField>$User.USER_Operating_Company__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Territory__c.ST_Operating_Company__c</field>
            <operation>equals</operation>
            <valueField>$Source.ACC_Operating_Company__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Territory__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>