force-app/main/default/objects/Account/fields/Shop_Size__c.field-meta.xml
<CustomField>
    <fullName>Shop_Size__c</fullName>
    <label>Shop Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>