force-app/main/default/objects/Account/fields/Trade_Channel_1__c.field-meta.xml
<CustomField>
    <fullName>Trade_Channel_1__c</fullName>
    <label>Trade Channel 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>