force-app/main/default/objects/Account/fields/Trade_Channel_2__c.field-meta.xml
<CustomField>
    <fullName>Trade_Channel_2__c</fullName>
    <label>Trade Channel 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>