force-app/main/default/objects/Account/fields/Value_Added_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Added_Tax_Number__c</fullName>
    <label>Value Added Tax Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>