force-app/main/default/objects/Account/recordTypes/AMERA_Business_Account.recordType-meta.xml
<RecordType>
    <fullName>AMERA_Business_Account</fullName>
    <active>true</active>
    <label>AMERA Business Account</label>
</RecordType>