force-app/main/default/objects/Account/recordTypes/AMERA_Prospect_Account.recordType-meta.xml
<RecordType>
    <fullName>AMERA_Prospect_Account</fullName>
    <active>true</active>
    <label>AMERA Prospect Account</label>
</RecordType>